Fix spacing and #lead coloring on small screens

--- a/assets/stylesheets/main.sass
+++ b/assets/stylesheets/main.sass
@@ -183,6 +183,7 @@ strong
     font-family: $sans_serif
     font-size: 13px
     font-weight: bold
+    margin: 30px 0
     text-transform: uppercase
 
     a
@@ -248,9 +249,17 @@ footer
       position: relative
       width: 84%
 
-      h1, .hook
+      h1
         color: #000
         text-shadow: 0 0 0
+
+      #lead a
+        color: $secondary
+        text-shadow: 0 0 0
+
+        &:hover
+          color: $primary
+          text-shadow: 0 0 0
 
   #container
     max-width: 100%
